objects/Vacancy__c.object
<CustomObject>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vacancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vacancies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vacancies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>This field indicates the total no. of days, the vacancy has been in open state after its creation date</description>
        <formula>IF( ISPICKVAL( Vacancy_Status__c , &quot;open&quot;) , ( NOW()  -  CreatedDate ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>Job Responsibilities</description>
        <label>Job Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Location__c</fullName>
        <description>We should pick up the job location where we wanted to work</description>
        <label>Job Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Housten</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vacancy_Status__c</fullName>
        <label>Vacancy Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Closed-Hired</fullName>
                </value>
                <value>
                    <fullName>Closed-Rejected</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vacancy_Type__c</fullName>
        <label>Vacancy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full-time</fullName>
                </value>
                <value>
                    <fullName>Part-Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vacancy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Duration__c</columns>
        <columns>Job_Description__c</columns>
        <columns>Job_Location__c</columns>
        <columns>Vacancy_Type__c</columns>
        <columns>Vacancy_Status__c</columns>
        <columns>Days_Open__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>jaanu jaan</value>
        </filters>
        <label>All Details</label>
    </listViews>
    <listViews>
        <fullName>All_vacancies</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Job_Description__c</columns>
        <columns>Job_Location__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>jaanu jaan</value>
        </filters>
        <label>All vacancies</label>
    </listViews>
    <listViews>
        <fullName>Vacancies_in_Sales_Dept</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Job_Description__c</columns>
        <columns>Job_Location__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <label>Vacancies in Sales Dept.</label>
    </listViews>
    <listViews>
        <fullName>Vacancy_and_jobapplication_Queue_Vacancy</fullName>
        <filterScope>Queue</filterScope>
        <label>Vacancy and jobapplication Queue</label>
        <queue>Vacancy_and_jobapplication_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Vacancy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vacancies</pluralLabel>
    <recordTypes>
        <fullName>HiringManager_Record</fullName>
        <active>true</active>
        <label>HiringManager Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interviewer_Record</fullName>
        <active>true</active>
        <label>Interviewer Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recruiter_Record</fullName>
        <active>true</active>
        <label>Recruiter Record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Parttime_Validation_rule</fullName>
        <active>true</active>
        <description>If the vacancy type is Part-time, then the duration should be mentioned between 1-365</description>
        <errorConditionFormula>ISPICKVAL( Vacancy_Type__c  ,&quot;Part-Time&quot;)   &amp;&amp;  (BLANKVALUE (Duration__c, 0)   &lt;=  0  ||  Duration__c  &gt; 365 )</errorConditionFormula>
        <errorMessage>Please fill in the duration between 1 and 365</errorMessage>
    </validationRules>
</CustomObject>